--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,15 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
+.site-container{
+
+}
+.folio-bg{
+  /* background: rgba(24, 24, 27, 0.8); */
+  background: linear-gradient(140deg, rgba(24,24,27,0.8) 0%, rgba(105,105,103,0.8) 23%,rgba(24,24,27,0.866) 60%, rgba(24,24,27,0.866) 100%);
+}
+
 ::-webkit-scrollbar{
   width: 7px;
 }
@@ -184,9 +193,9 @@
   -moz-transform: translateX(120%);
   -webkit-transform: translateX(120%);
   transform: translateX(120%);
-  -moz-animation: my-animation 25s linear 0.1s;
-  -webkit-animation: my-animation 25s linear 0.1s ;
-  animation: my-animation 25s linear 0.1s;
+  -moz-animation: my-animation 20s linear 0.1s;
+  -webkit-animation: my-animation 20s linear 0.1s ;
+  animation: my-animation 20s linear 0.1s;
   white-space: nowrap;
   letter-spacing: 0px;
 }
