--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@
 }
 
 .carousel-slider{
-  border-radius: 20px;
+  /* border-radius: 20px; */
   border: 1px solid rgba(40, 40, 40, 0.693);
   box-shadow: 0px 4px 15px 0px rgba(204, 204, 204, 0.637), 1px 0px 10px 0px black,inset -1px 0px 10px black;
 }
@@ -117,14 +117,14 @@
 }
 
 .control-arrow.control-prev{
-  border-radius: 20px 0px 0px 20px ;
+  /* border-radius: 20px 0px 0px 20px ; */
   margin-left:-1%;
   border-left: 2px solid black !important;
 }
 
 
 .control-arrow.control-next{
-  border-radius: 0px 19px 19px 0px;
+  /* border-radius: 0px 19px 19px 0px; */
   margin-right:-1%;
 }
 
