--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ body::before {
 
 .wide-screen-landing{
   /* text-shadow: 0px 0px 1px rgba(32, 37, 63, 0.135); */
-  filter: drop-shadow(1px 1px 0px #262d51);
+  filter: drop-shadow(1px 3px 2px #293d8e);
 }
 
 .burnett{
